[gd_scene load_steps=8 format=3 uid="uid://kpdqho4rrthg"]

[ext_resource type="Script" path="res://Scenes/loading_scene.gd" id="1_o3bdx"]
[ext_resource type="Texture2D" uid="uid://vh855tt7gcqa" path="res://Assets/LoadingScene/main.jpg" id="2_7qf3w"]
[ext_resource type="Texture2D" uid="uid://u5rl75snosiu" path="res://Assets/LoadingScene/loadingbar_off.png" id="3_4f0wu"]
[ext_resource type="Texture2D" uid="uid://dcshbkhn3s6x6" path="res://Assets/LoadingScene/title.png" id="3_n0e70"]
[ext_resource type="FontVariation" uid="uid://5m06ufhdiu2k" path="res://Assets/Fonts/small_font.tres" id="4_3olcg"]
[ext_resource type="Texture2D" uid="uid://bok3r0mpv3is8" path="res://Assets/LoadingScene/loadingbar_on.png" id="4_nrdem"]

[sub_resource type="LabelSettings" id="LabelSettings_5xvi8"]
font = ExtResource("4_3olcg")
font_size = 30

[node name="LoadingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o3bdx")

[node name="Background" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Background"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 1900.0
offset_bottom = 1060.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7qf3w")
expand_mode = 1

[node name="Title" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 224.0
offset_top = 19.0
offset_right = 1659.0
offset_bottom = 837.0
texture = ExtResource("3_n0e70")
expand_mode = 1

[node name="Progressbar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProgressBar" type="TextureProgressBar" parent="Progressbar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -533.0
offset_top = -163.0
offset_right = 537.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.995438, 0.978868)
value = 14.0
nine_patch_stretch = true
stretch_margin_left = 27
stretch_margin_top = 5
stretch_margin_right = 27
stretch_margin_bottom = 5
texture_under = ExtResource("3_4f0wu")
texture_progress = ExtResource("4_nrdem")

[node name="PersentLabel" type="Label" parent="Progressbar/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -24.5
offset_right = 97.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "LOADING 100 %"
label_settings = SubResource("LabelSettings_5xvi8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerMainData" type="Timer" parent="."]
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="value_changed" from="Progressbar/ProgressBar" to="." method="_on_texture_progress_bar_value_changed"]
[connection signal="timeout" from="TimerMainData" to="." method="_on_timer_main_data_timeout"]
